tests/requests/invalid/001.py
from gunicorn.http.errors import NoMoreData
request = NoMoreData